# vBot

./: functions.py  keep_alive.py  main.py  pyproject.toml  words.txt
