[tool.poetry]
name = "vGen"
version = "1.0"
description = "vGen is a small Python-Discord Bot with which you can draw teams and maps for Valorant on discord."
authors = ["gookieAT>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
discord-py-slash-command = "^1.1.1"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
